# Test_server

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  telecomserver.cpp  telecomserver.h  threadcontroller.cpp  threadcontroller.h
